[gd_scene load_steps=13 format=3 uid="uid://cugeqrxbbu65h"]

[ext_resource type="Script" path="res://Scripts/flying_enemy.gd" id="1_n0e8m"]
[ext_resource type="PackedScene" uid="uid://bcnp0ij0muhyc" path="res://Scenes/Composites/Hitbox.tscn" id="2_fvh75"]
[ext_resource type="PackedScene" uid="uid://c8bwem75fa8i8" path="res://Scenes/Composites/Health.tscn" id="3_2aki0"]
[ext_resource type="PackedScene" uid="uid://bq06aabs5hecr" path="res://Scenes/Composites/Hurtbox.tscn" id="4_cn2es"]
[ext_resource type="Script" path="res://Scripts/attack.gd" id="5_0l7wd"]
[ext_resource type="PackedScene" uid="uid://csb2e6bf3mo17" path="res://Scenes/Composites/death_spawner.tscn" id="5_48hw0"]
[ext_resource type="Script" path="res://Item.gd" id="6_eon3t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eno3b"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c6fy4"]
size = Vector2(40, 40)

[sub_resource type="Resource" id="Resource_tn5t8"]
script = ExtResource("5_0l7wd")
damage = 2.0
force = 200.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a4tq6"]
size = Vector2(40, 40)

[sub_resource type="Resource" id="Resource_fxwrs"]
script = ExtResource("6_eon3t")
currency = 5
health = 0.0

[node name="FlyingEnemy" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource("1_n0e8m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_eno3b")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0.520269, 1.49807e-06, 3.36915e-07, 1)
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="Health" parent="." instance=ExtResource("3_2aki0")]
maxHealth = 5

[node name="Hurtbox" parent="." instance=ExtResource("4_cn2es")]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_c6fy4")

[node name="Hitbox" parent="." instance=ExtResource("2_fvh75")]
collision_mask = 1
attack = SubResource("Resource_tn5t8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_a4tq6")

[node name="DeathSpawner" parent="." instance=ExtResource("5_48hw0")]
items = SubResource("Resource_fxwrs")

[connection signal="death" from="Health" to="." method="_on_health_death"]
[connection signal="take_damage" from="Hurtbox" to="." method="_on_hurtbox_take_damage"]
